--- a/views/people-form.ejs
+++ b/views/people-form.ejs
@@ -46,19 +46,25 @@
   </nav>
 
   <br>
-<!--Centers the entire form to take up 80% of the page-->
-  <div class="mx-auto" style="width: 80%;">
-    <!--Centers the text within the form-->
-    <div class="card text-center">
 
+  <div class="mx-auto" style="width: 80%;">
+    <div class="card text-center">
       <h2 class="card-header mx-auto" style="width: 100%;">People</h2>
 
-      <!--The row class makes the entire form one large row containing all the information-->
       <div class="row g-2 m-3">
-        <!--The col-md class splits the form into seperate colums, with this one being half of the form-->
         <div class="col-md me-3">
           <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Name(First and Last)</span>
+            <span class="input-group-text" id="inputGroup-sizing-default">First Name</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Middle Initial(optional)</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Last Name</span>
             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
           </div>
 
@@ -100,30 +106,55 @@
           <div class="input-group mb-3">
             <label class="input-group-text" for="inputGroupSelect01">Eye Color</label>
             <select class="form-select" id="inputGroupSelect01">
-              <option selected>Choose...</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <option selected>UNK</option>
+              <option value="1">BRO</option>
+              <option value="2">GRN</option>
+              <option value="3">BLU</option>
+              <option value="4">DBL</option>
+              <option value="5">LBL</option>
             </select>
           </div>
 
           <div class="input-group mb-3">
             <label class="input-group-text" for="inputGroupSelect01">Race</label>
             <select class="form-select" id="inputGroupSelect01">
-              <option selected>Choose...</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <option selected>U</option>
+              <option value="1">W</option>
+              <option value="2">B</option>
+              <option value="3">H</option>
+              <option value="4">I</option>
+              <option value="5">A</option>
             </select>
           </div>
 
           <div class="input-group mb-3">
             <label class="input-group-text" for="inputGroupSelect01">Hair Color</label>
             <select class="form-select" id="inputGroupSelect01">
-              <option selected>Choose...</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+              <option selected>UNK</option>
+              <option value="1">BGE</option>
+              <option value="2">BLK</option>
+              <option value="3">BLU</option>
+              <option value="4">DBL</option>
+              <option value="5">LBL</option>
+              <option value="6">BRZ</option>
+              <option value="7">BRO</option>
+              <option value="8">GLD</option>
+              <option value="9">GRY</option>
+              <option value="10">GRN</option>
+              <option value="11">MAR</option>
+              <option value="12">ORG</option>
+              <option value="13">PNK</option>
+              <option value="14">PLE</option>
+              <option value="15">RED</option>
+              <option value="16">SIL</option>
+              <option value="17">TAN</option>
+              <option value="18">TRQ</option>
+              <option value="19">WHI</option>
+              <option value="20">YEL</option>
+              <option value="21">TEA</option>
+              <option value="22">BLN</option>
+              <option value="23">HAZ</option>
+              <option value="24">BLD</option>
             </select>
           </div>
 
@@ -138,7 +169,7 @@
 
           <div class="form-floating mb-3">
             <textarea class="form-control overflow-auto" placeholder="Leave a comment here" id="floatingTextarea" style="height: 300px; min-height: 300px; max-height: 300px;"></textarea>
-            <label for="floatingTextarea">Comments</label>
+            <label for="floatingTextarea">Additional Information</label>
           </div>
 
           <div class="input-group mb-3">
@@ -197,7 +228,7 @@
               </div>
               <div class="form-floating">
                 <textarea class="form-control overflow-auto" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 150px; min-height: 150px; max-height: 150px;"></textarea>
-                <label for="floatingTextarea2">Comments</label>
+                <label for="floatingTextarea2">Hazard Information</label>
               </div>
             </div>
           </div>
@@ -205,23 +236,18 @@
           <br>
 
           <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Default</span>
+            <span class="input-group-text" id="inputGroup-sizing-default">License Number</span>
             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
           </div>
 
           <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Default</span>
+            <span class="input-group-text" id="inputGroup-sizing-default">License Date</span>
             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
           </div>
 
           <div class="input-group mb-3">
-            <label class="input-group-text" for="inputGroupSelect01">Options</label>
-            <select class="form-select" id="inputGroupSelect01">
-              <option selected>Choose...</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
-            </select>
+            <span class="input-group-text" id="inputGroup-sizing-default">License State</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
           </div>
 
           <br>
@@ -234,16 +260,16 @@
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
                 </tr>
                 <tr>
-                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
                 </tr>
                 <tr>
-                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
                 </tr>
                 <tr>
-                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
                 </tr>
               </tbody>
             </table>
@@ -256,16 +282,16 @@
               </thead>
               <tbody>
                   <tr>
-                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
                     </tr>
                     <tr>
-                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
                     </tr>
                     <tr>
-                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
                     </tr>
                     <tr>
-                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="First name" aria-label="First name"></th>
+                      <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
                     </tr>
               </tbody>
             </table>
@@ -273,41 +299,41 @@
             <table class="table table-striped table-hover border border-dark">
               <thead>
                 <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">First</th>
-                  <th scope="col">Last</th>
+                  <th scope="col">I.R.#</th>
+                  <th scope="col">Type</th>
+                  <th scope="col">Date</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
+                  <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
+                  <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
                 </tr>
                 <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
+                  <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
+                  <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
                 </tr>
                 <tr>
-                  <th scope="row">3</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
+                  <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
+                  <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
+                  <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
                 </tr>
                 <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
+                    <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
+                    <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
+                    <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
                   </tr>
                   <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
+                    <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
+                    <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
+                    <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
                   </tr>
                   <tr>
-                    <th scope="row">3</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
+                    <th scope="row"><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></th>
+                    <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
+                    <td><input type="text" class="form-control bg-transparent" placeholder="" aria-label="First name"></td>
                   </tr>
               </tbody>
             </table>
@@ -315,7 +341,7 @@
         </div>
         <div class="row g-2 mb-2 ml-2">
           <div>
-            <button class="btn btn-primary btn-lg col-md ms-3 mx-3" type="submit" >Button</button>
+            <button class="btn btn-primary btn-lg col-md ms-3 mx-3" type="submit" >Submit</button>
           </div>
         </div>
       </div>
@@ -335,3 +361,4 @@
 
 </body>
 </html>
+
