--- a/index.css
+++ b/index.css
@@ -47,7 +47,7 @@ h1{
     color: #fff;
     font-size: 16px;
 }
-.loginbox input[type="submit"]{
+.loginbox input[type="button"]{
     border: none;
     outline: none;
     height: 40px;
