--- a/index.css
+++ b/index.css
@@ -2,8 +2,10 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-
-}
+    background: url(lawandpublic.png);
+    background-size: cover;
+    background-position: center;
+}   
 .loginbox{
     width: 320px;
     height: 420px;
